--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,8 @@ package:
 source:
   fn: afex_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/afex_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/afex/afex_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/afex_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/afex/afex_{{ version }}.tar.gz
   sha256: 65bf137d1cffa97ac0bd79923612d29738d8dea3d1efa572875c0b570eab4453
 
 
