--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.18-0' %}
+{% set version = '0.20-2' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -12,25 +12,19 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/afex_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/afex/afex_{{ version }}.tar.gz
-  sha256: 65bf137d1cffa97ac0bd79923612d29738d8dea3d1efa572875c0b570eab4453
-
-
-  # patches:
-   # List any patch files here
-   # - fix.patch
+  sha256: c8aea83c563bb3e5d25251247c7bad8fe94829e9c0e751e1917779fde9701f94
 
 build:
   merge_build_host: True  # [win]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: xtable, parallel, plyr, optimx, nloptr, knitr, rmarkdown, lattice, latticeExtra, multcomp, testthat, mlmRev, dplyr, tidyr, dfoptim, Matrix, psych
+# Suggests: xtable, parallel, plyr, optimx, nloptr, knitr, rmarkdown, R.rsp, lattice, latticeExtra, multcomp, testthat, mlmRev, dplyr, tidyr, dfoptim, Matrix, psych, ggplot2, MEMSS, effects, carData
 requirements:
   build:
 
@@ -38,9 +32,9 @@ requirements:
     - r-base
     - r-car
     - r-coin
+    - r-emmeans
     - r-lme4 >=1.1_8
     - r-lmertest
-    - r-lsmeans >=2.17
     - r-pbkrtest >=0.4_1
     - r-reshape2
     - r-stringr
@@ -49,9 +43,9 @@ requirements:
     - r-base
     - r-car
     - r-coin
+    - r-emmeans
     - r-lme4 >=1.1_8
     - r-lmertest
-    - r-lsmeans >=2.17
     - r-pbkrtest >=0.4_1
     - r-reshape2
     - r-stringr
@@ -93,25 +87,25 @@ extra:
 # Package: afex
 # Type: Package
 # Title: Analysis of Factorial Experiments
-# Depends: R (>= 3.1.0), lme4 (>= 1.1-8), lsmeans (>= 2.17)
-# Suggests: xtable, parallel, plyr, optimx, nloptr, knitr, rmarkdown, lattice, latticeExtra, multcomp, testthat, mlmRev, dplyr, tidyr, dfoptim, Matrix, psych
+# Depends: R (>= 3.1.0), lme4 (>= 1.1-8), emmeans
+# Suggests: xtable, parallel, plyr, optimx, nloptr, knitr, rmarkdown, R.rsp, lattice, latticeExtra, multcomp, testthat, mlmRev, dplyr, tidyr, dfoptim, Matrix, psych, ggplot2, MEMSS, effects, carData
 # Imports: stringr, coin, pbkrtest (>= 0.4-1), lmerTest, car, reshape2, stats, methods
 # Description: Convenience functions for analyzing factorial experiments using ANOVA or mixed models. aov_ez(), aov_car(), and aov_4() allow specification of between, within (i.e., repeated-measures), or mixed between-within (i.e., split-plot) ANOVAs for data in long format (i.e., one observation per row), aggregating multiple observations per individual and cell of the design. mixed() fits mixed models using lme4::lmer() and computes p-values for all fixed effects using either Kenward-Roger or Satterthwaite approximation for degrees of freedom (LMM only), parametric bootstrap (LMMs and GLMMs), or likelihood ratio tests (LMMs and GLMMs). afex uses type 3 sums of squares as default (imitating commercial statistical software).
 # URL: http://afex.singmann.science/, https://github.com/singmann/afex
 # BugReports: https://github.com/singmann/afex/issues
 # License: GPL (>= 2)
 # Encoding: UTF-8
-# VignetteBuilder: knitr
-# Authors@R: c(person(given="Henrik", family="Singmann", role=c("aut", "cre"), email="singmann+afex@gmail.com"), person(given="Ben", family="Bolker", role=c("aut")), person(given="Jake", family="Westfall", role=c("aut")), person(given="Frederik", family="Aust", role=c("aut")), person(given="Sren", family="Hjsgaard", role=c("ctb")), person(given="John", family="Fox", role=c("ctb")), person(given="Michael A.", family="Lawrence", role=c("ctb")), person(given="Ulf", family="Mertens", role=c("ctb")), person(given="Jonathan", family="Love", role=c("ctb")) )
-# Version: 0.18-0
-# Date: 2017-05-25
+# VignetteBuilder: knitr, R.rsp
+# Authors@R: c(person(given="Henrik", family="Singmann", role=c("aut", "cre"), email="singmann+afex@gmail.com", comment=c(ORCID="0000-0002-4842-3657")), person(given="Ben", family="Bolker", role=c("aut")), person(given="Jake", family="Westfall", role=c("aut")), person(given="Frederik", family="Aust", role=c("aut"), comment = c(ORCID = "0000-0003-4900-788X")), person(given="Sren", family="Hjsgaard", role=c("ctb")), person(given="John", family="Fox", role=c("ctb")), person(given="Michael A.", family="Lawrence", role=c("ctb")), person(given="Ulf", family="Mertens", role=c("ctb")), person(given="Jonathon", family="Love", role=c("ctb")), person(given="Russell", family="Lenth", role=c("ctb")), person(given="Rune", family="Haubo Bojesen Christensen", role=c("ctb")) )
+# Version: 0.20-2
+# Date: 2018-04-03
 # RoxygenNote: 6.0.1
 # NeedsCompilation: no
-# Packaged: 2017-05-25 12:25:31 UTC; henrik
-# Author: Henrik Singmann [aut, cre], Ben Bolker [aut], Jake Westfall [aut], Frederik Aust [aut], Sren Hjsgaard [ctb], John Fox [ctb], Michael A. Lawrence [ctb], Ulf Mertens [ctb], Jonathan Love [ctb]
+# Packaged: 2018-04-03 09:16:37 UTC; henrik
+# Author: Henrik Singmann [aut, cre] (<https://orcid.org/0000-0002-4842-3657>), Ben Bolker [aut], Jake Westfall [aut], Frederik Aust [aut] (<https://orcid.org/0000-0003-4900-788X>), Sren Hjsgaard [ctb], John Fox [ctb], Michael A. Lawrence [ctb], Ulf Mertens [ctb], Jonathon Love [ctb], Russell Lenth [ctb], Rune Haubo Bojesen Christensen [ctb]
 # Maintainer: Henrik Singmann <singmann+afex@gmail.com>
 # Repository: CRAN
-# Date/Publication: 2017-05-25 22:17:48 UTC
+# Date/Publication: 2018-04-04 12:40:23 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
