--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.21-2' %}
+{% set version = '0.23-0' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -11,19 +11,20 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/afex_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/afex/afex_{{ version }}.tar.gz
-  sha256: bfcee80813aa2b96217621f390530c799f12b2580ac970b95e6287c9dd76c671
+  sha256: e76e21795d7eaf5959c016429373c92bdc34c24e98136f420096eb60c8d1647b
 
 build:
   merge_build_host: True  # [win]
   # If this is a new build for the same version, increment the build number.
   number: 0
+  noarch: generic
 
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: coin, xtable, parallel, plyr, optimx, nloptr, knitr, rmarkdown, R.rsp, lattice, latticeExtra, multcomp, testthat, mlmRev, dplyr, tidyr, dfoptim, Matrix, psych, ggplot2, MEMSS, effects, carData
+# Suggests: emmeans (>= 1.1.2), coin, xtable, parallel, plyr, optimx, nloptr, knitr, rmarkdown, R.rsp, lattice, latticeExtra, multcomp, testthat, mlmRev, dplyr, tidyr, dfoptim, Matrix, psych, ggplot2, MEMSS, effects, carData, ggbeeswarm, nlme, cowplot, jtools, ggpubr, ggpol, MASS, glmmTMB, brms, rstanarm
 requirements:
   build:
     - {{posix}}zip               # [win]
@@ -31,7 +32,6 @@ requirements:
   host:
     - r-base
     - r-car
-    - r-emmeans >=1.1.2
     - r-lme4 >=1.1_8
     - r-lmertest >=3.0_0
     - r-pbkrtest >=0.4_1
@@ -40,7 +40,6 @@ requirements:
   run:
     - r-base
     - r-car
-    - r-emmeans >=1.1.2
     - r-lme4 >=1.1_8
     - r-lmertest >=3.0_0
     - r-pbkrtest >=0.4_1
@@ -63,14 +62,16 @@ about:
   license: GPL (>= 2)
   summary: Convenience functions for analyzing factorial experiments using ANOVA or mixed models.
     aov_ez(), aov_car(), and aov_4() allow specification of between, within (i.e., repeated-measures),
-    or mixed between-within (i.e., split-plot) ANOVAs for data in long format (i.e.,
-    one observation per row), aggregating multiple observations per individual and cell
-    of the design. mixed() fits mixed models using lme4::lmer() and computes p-values
-    for all fixed effects using either Kenward-Roger or Satterthwaite approximation
-    for degrees of freedom (LMM only), parametric bootstrap (LMMs and GLMMs), or likelihood
-    ratio tests (LMMs and GLMMs). afex uses type 3 sums of squares as default (imitating
-    commercial statistical software).
+    or mixed (i.e., split-plot)  ANOVAs for data in long format (i.e., one observation
+    per row), automatically aggregating multiple observations per individual and cell  of
+    the design. mixed() fits mixed models using lme4::lmer() and computes  p-values
+    for all fixed effects using either Kenward-Roger or Satterthwaite  approximation
+    for degrees of freedom (LMM only), parametric bootstrap  (LMMs and GLMMs), or likelihood
+    ratio tests (LMMs and GLMMs).  afex_plot() provides a high-level interface for interaction
+    or one-way  plots using ggplot2, combining raw data and model estimates. afex uses  type
+    3 sums of squares as default (imitating commercial statistical software).
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
 
 extra:
   recipe-maintainers:
@@ -83,25 +84,24 @@ extra:
 # Package: afex
 # Type: Package
 # Title: Analysis of Factorial Experiments
-# Depends: R (>= 3.1.0), lme4 (>= 1.1-8), emmeans (>= 1.1.2)
-# Suggests: coin, xtable, parallel, plyr, optimx, nloptr, knitr, rmarkdown, R.rsp, lattice, latticeExtra, multcomp, testthat, mlmRev, dplyr, tidyr, dfoptim, Matrix, psych, ggplot2, MEMSS, effects, carData
+# Depends: R (>= 3.1.0), lme4 (>= 1.1-8)
+# Suggests: emmeans (>= 1.1.2), coin, xtable, parallel, plyr, optimx, nloptr, knitr, rmarkdown, R.rsp, lattice, latticeExtra, multcomp, testthat, mlmRev, dplyr, tidyr, dfoptim, Matrix, psych, ggplot2, MEMSS, effects, carData, ggbeeswarm, nlme, cowplot, jtools, ggpubr, ggpol, MASS, glmmTMB, brms, rstanarm
 # Imports: pbkrtest (>= 0.4-1), lmerTest (>= 3.0-0), car, reshape2, stats, methods
-# Description: Convenience functions for analyzing factorial experiments using ANOVA or mixed models. aov_ez(), aov_car(), and aov_4() allow specification of between, within (i.e., repeated-measures), or mixed between-within (i.e., split-plot) ANOVAs for data in long format (i.e., one observation per row), aggregating multiple observations per individual and cell of the design. mixed() fits mixed models using lme4::lmer() and computes p-values for all fixed effects using either Kenward-Roger or Satterthwaite approximation for degrees of freedom (LMM only), parametric bootstrap (LMMs and GLMMs), or likelihood ratio tests (LMMs and GLMMs). afex uses type 3 sums of squares as default (imitating commercial statistical software).
+# Description: Convenience functions for analyzing factorial experiments using ANOVA or mixed models. aov_ez(), aov_car(), and aov_4() allow specification of between, within (i.e., repeated-measures), or mixed (i.e., split-plot)  ANOVAs for data in long format (i.e., one observation per row), automatically aggregating multiple observations per individual and cell  of the design. mixed() fits mixed models using lme4::lmer() and computes  p-values for all fixed effects using either Kenward-Roger or Satterthwaite  approximation for degrees of freedom (LMM only), parametric bootstrap  (LMMs and GLMMs), or likelihood ratio tests (LMMs and GLMMs).  afex_plot() provides a high-level interface for interaction or one-way  plots using ggplot2, combining raw data and model estimates. afex uses  type 3 sums of squares as default (imitating commercial statistical software).
 # URL: http://afex.singmann.science/, https://github.com/singmann/afex
 # BugReports: https://github.com/singmann/afex/issues
 # License: GPL (>= 2)
 # Encoding: UTF-8
 # VignetteBuilder: knitr, R.rsp
-# Authors@R: c(person(given="Henrik", family="Singmann", role=c("aut", "cre"), email="singmann+afex@gmail.com", comment=c(ORCID="0000-0002-4842-3657")), person(given="Ben", family="Bolker", role=c("aut")), person(given="Jake", family="Westfall", role=c("aut")), person(given="Frederik", family="Aust", role=c("aut"), comment = c(ORCID = "0000-0003-4900-788X")), person(given="Sren", family="Hjsgaard", role=c("ctb")), person(given="John", family="Fox", role=c("ctb")), person(given="Michael A.", family="Lawrence", role=c("ctb")), person(given="Ulf", family="Mertens", role=c("ctb")), person(given="Jonathon", family="Love", role=c("ctb")), person(given="Russell", family="Lenth", role=c("ctb")), person(given="Rune", family="Haubo Bojesen Christensen", role=c("ctb")) )
-# Version: 0.21-2
-# Date: 2018-06-24
-# RoxygenNote: 6.0.1
+# Authors@R: c(person(given="Henrik", family="Singmann", role=c("aut", "cre"), email="singmann+afex@gmail.com", comment=c(ORCID="0000-0002-4842-3657")), person(given="Ben", family="Bolker", role=c("aut")),  person(given="Jake",family="Westfall", role=c("aut")),  person(given="Frederik", family="Aust", role=c("aut"),  comment = c(ORCID = "0000-0003-4900-788X")), person(given="Sren", family="Hjsgaard", role=c("ctb")), person(given="John", family="Fox", role=c("ctb")),  person(given="Michael A.", family="Lawrence", role=c("ctb")),  person(given="Ulf", family="Mertens", role=c("ctb")),  person(given="Jonathon", family="Love", role=c("ctb")),  person(given="Russell", family="Lenth", role=c("ctb")),  person(given="Rune", family="Haubo Bojesen Christensen", role=c("ctb")))
+# Version: 0.23-0
+# RoxygenNote: 6.1.1
 # NeedsCompilation: no
-# Packaged: 2018-06-24 16:41:15 UTC; henrik
+# Packaged: 2019-02-18 22:25:06 UTC; henrik
 # Author: Henrik Singmann [aut, cre] (<https://orcid.org/0000-0002-4842-3657>), Ben Bolker [aut], Jake Westfall [aut], Frederik Aust [aut] (<https://orcid.org/0000-0003-4900-788X>), Sren Hjsgaard [ctb], John Fox [ctb], Michael A. Lawrence [ctb], Ulf Mertens [ctb], Jonathon Love [ctb], Russell Lenth [ctb], Rune Haubo Bojesen Christensen [ctb]
 # Maintainer: Henrik Singmann <singmann+afex@gmail.com>
 # Repository: CRAN
-# Date/Publication: 2018-06-24 17:25:52 UTC
+# Date/Publication: 2019-02-19 05:30:09 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
